fix: meme gap

--- a/components/LandingPageContent/MainLandingPage/LandingPageContent.module.css
+++ b/components/LandingPageContent/MainLandingPage/LandingPageContent.module.css
@@ -286,7 +286,7 @@
 
 .memes {
   display: flex;
-  gap: 3rem;
+  gap: 2%;
 }
 
 /* FAQ */
